--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -76,7 +76,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <li><a href="#load-normalized-expression-data"><span class="toc-section-number">6.2</span> Load normalized expression data</a></li>
 <li><a href="#deg-analysis-with-limma-1"><span class="toc-section-number">6.3</span> DEG analysis with Limma</a></li>
 <li><a href="#obtain-annotation-information"><span class="toc-section-number">6.4</span> Obtain annotation information</a></li>
-<li><a href="#identify-deg-overlaps-with-peters-et-al--peters2015-fc"><span class="toc-section-number">6.5</span> Identify DEG overlaps with Peters et al <span class="citation">(2015)</span></a></li>
+<li><a href="#identify-deg-overlaps-with-peters-et-al.--peters2015-fc"><span class="toc-section-number">6.5</span> Identify DEG overlaps with Peters et al. <span class="citation">(2015)</span></a></li>
 </ul></li>
 <li><a href="#funding"><span class="toc-section-number">7</span> Funding</a></li>
 <li><a href="#version-information"><span class="toc-section-number">8</span> Version information</a></li>
@@ -240,8 +240,7 @@ saveRDS(degMA, &quot;./results/degMA.rds&quot;)</code></pre>
 </div>
 <div id="obtain-annotation-information" class="section level2">
 <h2><span class="header-section-number">6.4</span> Obtain annotation information</h2>
-<p>The following generate annotation information for the Affymetirx probe set identifiers.</p>
-<p>Note, the three different Affymetrix chip types used by CMAP share most probe set ids (&gt;95%), meaning it is possible to combine the data after normalization and use the same annotation package for all of them. The number of CEL files from each chip type are: 807 CEL files from HG-U133A, 6029 CEL files from HT_HG-U133A, and 220 CEL files from U133AAofAv2. The annotation libraries for the two first ones are <code>hgu133a.db</code>and <code>hthgu133a.db</code>. However, there is no annotation library (e.g. CDF) available for U133AAofAv2.</p>
+<p>The following generates annotation information for the Affymetirx probe set identifiers. Note, the three different Affymetrix chip types used by CMAP share most probe set ids (&gt;95%), meaning it is possible to combine the data after normalization and use the same annotation package for all of them. The number of CEL files from each chip type are: 807 CEL files from HG-U133A, 6029 CEL files from HT_HG-U133A, and 220 CEL files from U133AAofAv2. The annotation libraries for the two first ones are <code>hgu133a.db</code>and <code>hthgu133a.db</code>. However, there is no annotation library (e.g. CDF) available for U133AAofAv2.</p>
 <pre class="r"><code>library(hgu133a.db)
 myAnnot &lt;- data.frame(ACCNUM=sapply(contents(hgu133aACCNUM), paste, collapse=&quot;, &quot;), 
                              SYMBOL=sapply(contents(hgu133aSYMBOL), paste, collapse=&quot;, &quot;), 
@@ -251,8 +250,9 @@ myAnnot &lt;- data.frame(ACCNUM=sapply(contents(hgu133aACCNUM), paste, collapse=
                              DESC=sapply(contents(hgu133aGENENAME), paste, collapse=&quot;, &quot;))
 saveRDS(myAnnot, &quot;./results/myAnnot.rds&quot;)</code></pre>
 </div>
-<div id="identify-deg-overlaps-with-peters-et-al--peters2015-fc" class="section level2">
-<h2><span class="header-section-number">6.5</span> Identify DEG overlaps with Peters et al <span class="citation">(2015)</span></h2>
+<div id="identify-deg-overlaps-with-peters-et-al.--peters2015-fc" class="section level2">
+<h2><span class="header-section-number">6.5</span> Identify DEG overlaps with Peters et al. <span class="citation">(2015)</span></h2>
+<p>Peters et al. <span class="citation">(2015)</span> reported 1,497 age-related gene expression signatures. The following intersects computes their intersects with each of the 3,318 drug-responsive DEG sets from CMAP. Subsequently, the Jaccard index is used as a simple similarity metric and used to sort the results. The 20 top scoring results are given below and the full data set is written to a file named <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL.xls"><code>degOL.xls</code></a>.</p>
 <pre class="r"><code>PMID26490707 &lt;- read.delim(&quot;./data/PMID26490707_S1.xls&quot;, comment=&quot;#&quot;)
 myAnnot &lt;- readRDS(&quot;./results/myAnnot.rds&quot;) 
 affyid &lt;- row.names(myAnnot[myAnnot$ENTREZID %in% PMID26490707$&quot;NEW.Entrez.ID&quot;,])
