--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -363,10 +363,16 @@ diseasecmap2[[1]][1:20,]</code></pre>
 <div id="age-drug-network-analysis" class="section level1">
 <h1><span class="header-section-number">8</span> Age-drug network analysis</h1>
 <p>In progress…</p>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 <div id="age-disease-network-analysis" class="section level1">
 <h1><span class="header-section-number">9</span> Age-disease network analysis</h1>
 <p>In progress…</p>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 <div id="funding" class="section level1">
 <h1><span class="header-section-number">10</span> Funding</h1>
