--- a/vignettes/longevityTools.html
+++ b/vignettes/longevityTools.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: Analysis Tools for Longevity Research</h1>
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 19 January, 2016</em></h4>
+<h4 class="date"><em>Last update: 20 January, 2016</em></h4>
 </div>
 
 <h1>Contents</h1>
@@ -170,16 +170,32 @@ vignette(&quot;longevityTools&quot;) # Opens vignette</code></pre>
 ## [1] C
 ## 
 ## attached base packages:
-## [1] stats     graphics  utils     datasets  grDevices methods   base     
+## [1] parallel  stats     graphics  utils     datasets  grDevices methods   base     
 ## 
 ## other attached packages:
-## [1] ggplot2_2.0.0        longevityTools_1.0.0 BiocStyle_1.8.0     
+##  [1] ggplot2_2.0.0           longevityTools_1.0.0    BiocStyle_1.8.0         DrugVsDisease_2.9.0    
+##  [5] qvalue_2.2.0            cMap2data_1.6.0         DrugVsDiseasedata_1.6.0 GEOquery_2.36.0        
+##  [9] ArrayExpress_1.30.1     biomaRt_2.26.1          limma_3.26.3            affy_1.48.0            
+## [13] Biobase_2.30.0          BiocGenerics_0.16.1     vimcom_1.2-6            setwidth_1.0-4         
+## [17] colorout_1.1-1         
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] Rcpp_0.12.3      codetools_0.2-14 digest_0.6.9     plyr_1.8.3       grid_3.2.2      
-##  [6] gtable_0.1.2     formatR_1.2.1    magrittr_1.5     evaluate_0.8     scales_0.3.0    
-## [11] stringi_1.0-1    rmarkdown_0.9.2  tools_3.2.2      stringr_1.0.0    munsell_0.4.2   
-## [16] yaml_2.1.13      colorspace_1.2-6 htmltools_0.3    knitr_1.12</code></pre>
+##  [1] SummarizedExperiment_1.0.1 oligo_1.34.0               reshape2_1.4.1            
+##  [4] splines_3.2.2              colorspace_1.2-6           htmltools_0.3             
+##  [7] stats4_3.2.2               yaml_2.1.13                XML_3.98-1.3              
+## [10] DBI_0.3.1                  affyio_1.40.0              foreach_1.4.3             
+## [13] plyr_1.8.3                 stringr_1.0.0              zlibbioc_1.16.0           
+## [16] Biostrings_2.38.1          munsell_0.4.2              gtable_0.1.2              
+## [19] evaluate_0.8               codetools_0.2-14           knitr_1.12                
+## [22] ff_2.2-13                  IRanges_2.4.3              GenomeInfoDb_1.6.1        
+## [25] BiocInstaller_1.20.1       AnnotationDbi_1.32.0       preprocessCore_1.32.0     
+## [28] Rcpp_0.12.3                formatR_1.2.1              scales_0.3.0              
+## [31] S4Vectors_0.8.7            XVector_0.10.0             affxparser_1.42.0         
+## [34] bit_1.1-12                 oligoClasses_1.32.0        digest_0.6.9              
+## [37] stringi_1.0-1              GenomicRanges_1.22.1       grid_3.2.2                
+## [40] tools_3.2.2                bitops_1.0-6               magrittr_1.5              
+## [43] RCurl_1.95-4.7             RSQLite_1.0.0              rmarkdown_0.9.2           
+## [46] iterators_1.0.8</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
